<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/tab_home" />
    <item
        android:id="@+id/nav_workout"
        android:icon="@drawable/ic_nav_workout"
        android:title="@string/tab_workout" />
    <item
        android:id="@+id/nav_diet"
        android:icon="@drawable/ic_nav_diet"
        android:title="@string/tab_diet" />
    <item
        android:id="@+id/nav_chat"
        android:icon="@drawable/ic_nav_chat"
        android:title="@string/tab_chat" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/tab_profile" />
</menu>

